--- a/site/server/iframe.html
+++ b/site/server/iframe.html
@@ -5,6 +5,10 @@
   <link href="layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
+  <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+    ':35729/livereload.js?snipver=1"></' + 'script>')
+  </script>
   ${partial}
 </body>
 </html>
